# CMakeTutorial-CN

./: Readme.md
tutorial/: A Basic Starting Point.md  Adding Export Configuration.md  Adding Generator Expressions.md  Adding Support for a Testing Dashboard.md  Adding System Introspection.md  Adding Usage Requirements for a Library.md  Adding a Custom Command and Generated File.md  Adding a Library.md  Installing and Testing.md  Packaging Debug and Release.md  Packaging an Installer.md  Selecting Static or Shared Libraries.md  index.md
tutorial/Step1/: CMakeLists.txt  TutorialConfig.h.in  tutorial.cxx
tutorial/Step2/: CMakeLists.txt  tutorial.cxx
tutorial/Step2/MathFunctions/: CMakeLists.txt  MathFunctions.cxx  mysqrt.cxx
